--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>vue-self</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="static/css/reset.css">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
